fix: page max-width for readability

--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -75,3 +75,7 @@
     color: $primary-dark;
   }
 }
+
+@mixin max-character-width {
+  max-width: 75ch;
+}
